codex-rs/tui/src/snapshots/codex_tui__app__tests__agent_picker_route_metadata_narrow.snap
---
source: tui/src/app/tests.rs
expression: "render_bottom_popup(&app.chat_widget, 40)"
---
  Agents
  Select an agent to watch. ⌥+←
  previous, ⌥+→ next.


› 1. • Main [default] (cur… idle
  2. • /root/reload_scout_… [scout] gpt-
                            5.6-terra
                            medium
                            running

  enter select · esc back
