codex-rs/tui/src/snapshots/codex_tui__app__tests__late_reasoning_summary_before_consolidated_answer.snap
---
source: tui/src/app/tests.rs
assertion_line: 4674
expression: rendered
---
• Late summary

• first answer line
  second answer line
