codex-rs/tui/src/snapshots/codex_tui__app__tests__response_attempt_reset_replacement.snap
---
source: tui/src/app/tests.rs
expression: rendered
---
recover this turn

• complete HTTPS replacement
